--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header style="font-size:3rem;">Mahabharat</header>
+	<nav>
+		<a href="#actor" id="nav-actor" style="border:2px solid orange;padding:3px;border-radius:5px;">Actor</a>
+		<a href="#quote" id="nav-quote" style="background-color:orange; padding:4px;color:white;">Quote</a>
+	</nav>
+	<summary style="margin: 11px 0px;">
+		This is about dharm and adharm and katha of parmath <em>Mahabharat</em>
+	</summary>
+	<section id="actor" style="margin:5px 0px;">
+		<b>Actor</b>: Prabhu Krishna
+	</section>
+	<section id="quote" style="background-color:teal;color:white;padding:10px;border-left:5px solid red;margin:4px 0;">
+		कार्मेनयवाधिकारस्ते माफलेषु कदाचन ||
+	</section>
+	<aside>
+		<b>IMDB Rating :</b> 11
+		<br>
+		<b>Release Date &nbsp;&nbsp;:</b> 2018
+	</aside>
+	<footer style="margin:2px 0px;">
+		Produced by: Daas karan
+	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
